cks/01-network-policies/02-deny-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress-policy
  namespace: sandbox
spec:
  podSelector: {}
  policyTypes:
  - Ingress
