cks/01-network-policies/03-deny-egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress-policy
  namespace: sandbox
spec:
  podSelector: {}
  policyTypes:
  - Egress
