cks/01-network-policies/06-allow-internet-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-policy
  namespace: sandbox
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except: 
        - 10.0.0.0/8
        - 192.168.0.0/16
